<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gradient"
    tools:context="com.hustleandswag.earlytwo.SignInActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/sign_in_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_email_password"
        android:layout_marginBottom="10dp"
        android:textColor="@color/text"
        android:textSize="16dp"
        android:gravity="center"
        android:text="Sign in or Sign up with 01029304920"/>

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_buttons"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:textColor="@color/text"
            android:textColorHint="@color/button_bg"

            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:textColor="@color/text"
            android:textColorHint="@color/button_bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/field_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:textColor="@color/text"
            android:textColorHint="@color/button_bg"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:maxLines="1" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/button_bg"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/button_bg"
            android:text="@string/sign_up" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/to_sign_in"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/button_bg"
            android:gravity="center"
            android:text="로그인"
            android:textColor="@color/text"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/search_bg"/>

        <com.digits.sdk.android.DigitsAuthButton
            android:id="@+id/auth_button"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>